# object-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
grafana/: grafana.json
jetson_setup/: .gitignore
jetson_setup/.ssh/: id_rsa  id_rsa.pub
jetson_setup/inventory/: .gitignore  hosts.ini
jetson_setup/playbooks/: ansible.yml  install.yml
models/: .gitignore  yolo11n.pt.dvc
scripts/: mqtt_subscriber.py  realtime_video_detect.py  realtime_video_detect_mqtt.py  realtime_video_detect_mqtt_prometheus_client.py  video_detect.py
setup/playbooks/: ansible.yml
test/: test.py
videos/: .gitignore  input.mp4.dvc
