[project]
name = "object-detecion-ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "paho-mqtt>=2.1.0",
    "supervision>=0.26.1",
    "typing-extensions>=4.14.0",
]
